--- a/package.json
+++ b/package.json
@@ -9,17 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookstate/core": "^4.0.1",
+    "@mantine/carousel": "^7.12.2",
     "@mantine/core": "^7.12.2",
     "@mantine/hooks": "^7.12.2",
     "@prisma/client": "^5.19.1",
+    "@react-icons/all-files": "^4.1.0",
+    "@types/lodash.add": "^3.7.9",
+    "embla-carousel-autoplay": "^8.2.1",
+    "embla-carousel-react": "^7.1.0",
     "next": "14.2.9",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-icons": "^3.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.9",
     "postcss": "^8",
