--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/lodash.add": "^3.7.9",
     "embla-carousel-autoplay": "^8.2.1",
     "embla-carousel-react": "^7.1.0",
+    "lodash": "^4.17.21",
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
